fixing icon alignment

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -57,7 +57,6 @@
 #telephone-icon{
     height: 15px;
     width: 15px;
-    margin-top: 10px;
     margin-right: 10px;
 }
 
